--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 body {
   background-color: white;
-  color: royalblue;
+  color: darkslategray;
+  margin: 15px 25px;
 }
+
+#personal, #skills, #education{
+  padding: 12px;
+}
+
+h1 , h2{margin-left:20px;
+ color:darkgreen}
+
+h4 {color: darkolivegreen;}
+h3 {color:olivedrab;
+  padding-left:6px;}
+
